--- a/package.json
+++ b/package.json
@@ -16,5 +16,8 @@
   "bugs": {
     "url": "https://github.com/dcabrera1982/liri-node-app/issues"
   },
-  "homepage": "https://github.com/dcabrera1982/liri-node-app#readme"
+  "homepage": "https://github.com/dcabrera1982/liri-node-app#readme",
+  "dependencies": {
+    "axios": "^0.19.0"
+  }
 }
