--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "axios": "^0.19.0",
     "dotenv": "^8.0.0",
     "inquirer": "^6.5.1",
+    "keys": "^0.1.2",
     "node-spotify-api": "^1.1.1"
   }
 }
